Add new tests after log in website

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@ markers =
     smoke: marker for smoke tests
     regression: marker for regression tests
     win10
+    login_guest: test login by guest
+    login: tests after log in website
