Add updates for code-review

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ markers =
     win10
     login_guest: test login by guest
     login: tests after log in website
+    need_review: tests for code-review
